[package]
name = "rusty_scissors"
version = "1.2.0"
edition = "2021"
description = "A command-line tool for trimming images."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
walkdir = "2.4.0"
rayon = "1.8.0"
filetime = "0.2.23"